
2020-11-27  Ron Norman <rjn@inglenet.com>

	* codegen.c,typeck.c,parser.y,tree.h: 
			Optimize subscript checking when SEARCHing table
			Emit check for valid subscript on entry to SEARCH logic

2020-11-25  Ron Norman <rjn@inglenet.com>

	* codegen.c: Additional work to enhance INITIALIZE

2020-11-23  Ron Norman <rjn@inglenet.com>

	* codegen.c: Generated code for INITIALIZE enhanced to emit progressive
			'memcpy' to speed up the process
			If size is not known until run time then emit call to
			cob_init_table

2020-11-18  Ron Norman <rjn@inglenet.com>

	* codegen.c,typeck.c: Generated code for INITIALIZE computes the actual
	  length for OCCURS DEPENDING on x UNBOUNDED before doing the initialize

2020-11-11  Ron Norman <rjn@inglenet.com>

	* codegen.c: Emit correct code for -debug within C function calls

2020-11-04  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_initialize_compound): adjusted OCCURS initialization
	  to only do the initialization (and runtime checks) once and then
	  memcpy to all other occurences
	* tree.c: preparation for all-upper-case names (post 3.1)

2020-11-03  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c, tree.h, cobc.c: added cb_wants_dump_comments variable,
	  set by cobc if COBC_GEN_DUMP_COMMENTS is set
	* codegen.c: depending on cb_wants_dump_comments generate additional
	  dump code *as comment*: REDEFINES and lvl 66/78 fields, fields that
	  should not be dumped and information about field attributes
	* codegen.c (output_display_fields): removed duplicate code,
	  use of output_block_open/output_block_close

2020-11-03  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, ppparse.y: actually %require bison 3.0 (see 2020-02-02)

2020-11-02  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (ppcopy_find_file): extracted from (ppcopy)
	* pplex.l (ppcopy): reordered to remove need for goto
	* pplex.l (ppcopy): for COPY copybook-name IN library-name